--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "startN": "node dist/index.js",
     "start": "npm run build:live",
-    "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./src/index.ts"
+    "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./src/index.ts",
+    "build": "tsc"
   },
   "dependencies": {
     "@types/express": "~4.0.36",
