--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@types/express": "~4.0.36",
-    "@types/socket.io": "~1.4.29",
-    "express": "~4.10.0",
-    "socket.io": "~2.0.3"
+    "@types/express": "~4.11.1",
+    "@types/socket.io": "~1.4.32",
+    "express": "~4.16.3",
+    "socket.io": "~2.0.4"
   },
   "devDependencies": {
-    "@types/node": "^9.4.7",
-    "nodemon": "^1.17.2",
-    "ts-node": "^5.0.1",
-    "typescript": "~2.5.0"
+    "@types/node": "~9.4.7",
+    "nodemon": "~1.17.2",
+    "ts-node": "~5.0.1",
+    "typescript": "~2.7.2"
   }
 }
