--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@types/bcrypt": "^1.0.0",
     "@types/express": "~4.11.1",
     "@types/socket.io": "~1.4.32",
+    "bcrypt": "^1.0.3",
     "express": "~4.16.3",
     "socket.io": "~2.0.4"
   },
