--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,11 @@
 {
-  "files": [
-    "src/index.ts"
-  ],
   "compilerOptions": {
     "noImplicitAny": true,
     "rootDir": "src",
     "outDir": "dist",
     "lib": ["es2015"],
     "target": "es5",
-    "moduleResolution": "node",
-    "types": ["node"]
+    "moduleResolution": "node"
   },
   "include": [
     "src/**/*"
