--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@types/bcrypt": "^1.0.0",
-    "@types/express": "~4.11.1",
-    "@types/socket.io": "~1.4.32",
-    "bcrypt": "^1.0.3",
     "express": "~4.16.3",
-    "socket.io": "~2.0.4"
+    "mysql": "^2.15.0",
+    "rxjs": "^5.5.7",
+    "socket.io": "~2.0.4",
+    "ts-md5": "^1.2.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^1.0.0",
+    "@types/express": "~4.11.1",
+    "@types/mysql": "^2.15.3",
+    "@types/socket.io": "~1.4.32",
     "@types/node": "~9.4.7",
     "nodemon": "~1.17.2",
     "ts-node": "~5.0.1",
